hphp/test/zend/good/zend/jump14.php
<?php 

goto A;

{
	B:
		goto C;	
		return;
}

A:
	goto B;



{
	C:
	{
		print "Done!\n";
	}
}

?>