hphp/test/zend/bad/zend/errmsg_029.php
<?php

class parent {
}

echo "Done\n";
?>